[gd_scene load_steps=3 format=3 uid="uid://b72j0mnmxb58k"]

[ext_resource type="Script" uid="uid://bthoenrvh6d2s" path="res://Scripts/UI/end_screen.gd" id="1_eod5t"]
[ext_resource type="FontFile" uid="uid://vuvad7koos8g" path="res://Assets/monogram.ttf" id="1_hwcsp"]

[node name="Control" type="Control" node_paths=PackedStringArray("exit_button", "retry_button", "next_level_button")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_eod5t")
exit_button = NodePath("VBoxContainer/ButtonBox/HBoxContainer/ExitButtonControl/ExitButton")
retry_button = NodePath("VBoxContainer/ButtonBox/HBoxContainer/ReplayButtonControl/ReplayButton")
next_level_button = NodePath("VBoxContainer/ButtonBox/HBoxContainer/NextButtonControl/NextButton")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.2
anchor_top = 0.2
anchor_right = 0.8
anchor_bottom = 0.8
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(345.5, 194.4)

[node name="TextBox" type="Control" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5

[node name="Label" type="Label" parent="VBoxContainer/TextBox"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_hwcsp")
theme_override_font_sizes/font_size = 54
text = "* Placeholder Text *"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="ButtonBox" type="Control" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/ButtonBox"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 48.0
offset_bottom = -48.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Separator3" type="Control" parent="VBoxContainer/ButtonBox/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.25

[node name="ExitButtonControl" type="Control" parent="VBoxContainer/ButtonBox/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ExitButton" type="Button" parent="VBoxContainer/ButtonBox/HBoxContainer/ExitButtonControl"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Exit"

[node name="Separator" type="Control" parent="VBoxContainer/ButtonBox/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.25

[node name="ReplayButtonControl" type="Control" parent="VBoxContainer/ButtonBox/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ReplayButton" type="Button" parent="VBoxContainer/ButtonBox/HBoxContainer/ReplayButtonControl"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Replay Level"

[node name="Separator2" type="Control" parent="VBoxContainer/ButtonBox/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.25

[node name="NextButtonControl" type="Control" parent="VBoxContainer/ButtonBox/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="NextButton" type="Button" parent="VBoxContainer/ButtonBox/HBoxContainer/NextButtonControl"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Next Level"

[node name="Separator4" type="Control" parent="VBoxContainer/ButtonBox/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.25

[connection signal="pressed" from="VBoxContainer/ButtonBox/HBoxContainer/ExitButtonControl/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonBox/HBoxContainer/ReplayButtonControl/ReplayButton" to="." method="_on_replay_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonBox/HBoxContainer/NextButtonControl/NextButton" to="." method="_on_next_button_pressed"]
